[gd_scene load_steps=7 format=3 uid="uid://8xjejnk354r8"]

[ext_resource type="Script" path="res://scripts/Generators/Generator.gd" id="1_6qjvh"]
[ext_resource type="Texture2D" uid="uid://ch7fng4dfjqma" path="res://icon.svg" id="2_dds5s"]
[ext_resource type="AudioStream" uid="uid://c7wf02k33nlqu" path="res://assets/sounds/cashIn.mp3" id="4_ag7kb"]
[ext_resource type="Texture2D" uid="uid://cfqv5nvgf4pdb" path="res://assets/cookie.png" id="4_odo2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehiba"]
content_margin_left = 3.0
bg_color = Color(0.172549, 0.517647, 0.615686, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 20
border_width_bottom = 3
border_color = Color(0.117647, 0.0431373, 0.00392157, 1)
corner_radius_top_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mldgr"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[node name="Generator" type="Panel"]
custom_minimum_size = Vector2(10, 75)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 151.0
offset_top = 561.0
offset_right = -619.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ehiba")
script = ExtResource("1_6qjvh")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mldgr")

[node name="TextureRect" type="TextureRect" parent="Button"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -32.0
offset_right = -22.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
texture = ExtResource("2_dds5s")
expand_mode = 1

[node name="PriceLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 53.5
offset_top = -35.0
offset_right = 94.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "[Price Label]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 13.0
offset_right = 57.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(1, 1, 1, 0.592157)
theme_override_font_sizes/font_size = 50
text = "[Quantity ]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameGeneratorLabel" type="Label" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.85
offset_top = 14.47
offset_right = -26.8499
offset_bottom = 48.47
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "[Name Builder]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CookieIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -167.0
offset_top = 4.0
offset_right = -139.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
texture = ExtResource("4_odo2j")
expand_mode = 1

[node name="GeneratorTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="clickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ag7kb")
volume_db = -18.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="GeneratorTimer" to="." method="_on_generator_timer_timeout"]
